waybar/style.css
@import "mocha.css";

* {
	font-family: "JetBrainsMono Nerd Font", Roboto, Helvetica, Arial, sans-serif;
	font-size: 16px;
}

window#waybar {
	background-color: rgba(0, 0, 0, 0);
	border-radius: 13px;
	transition-property: background-color;
	transition-duration: .5s;
}

button {
	/* Use box-shadow instead of border so the text isn't offset */
	box-shadow: inset 0 -3px transparent;
	/* Avoid rounded borders under each button name */
	border: none;
	border-radius: 0;
}

/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
button:hover {
	background: inherit;
	box-shadow: inset 0 -3px #ffffff;
}

/* you can set a style on hover for any module like this */
#pulseaudio:hover {
	background-color: @surface2;
}

#workspaces button {
	padding: 0 5px;
	background-color: transparent;
	color: #ffffff;
}


#workspaces button:hover {
	background: rgba(0, 0, 0, 0.2);
}

#workspaces button.focused {
	background-color: @lavender;
	box-shadow: inset 0 -3px #ffffff;
}

#workspaces button.urgent {
	background-color: #eb4d4b;
}

#mode {
	background-color: #64727D;
	box-shadow: inset 0 -3px #ffffff;
}

#clock,
#battery,
#cpu,
#memory,
#temperature,
#network,
#pulseaudio {
	padding: 0 10px;
}

#pulseaudio { color: @maroon; }

#network { color: @yellow; }

#cpu { color: @blue; }

#temperature { color: @blue; }

#battery { color: @green; }
#battery.warning {
	color: @peach;
	background: none;
}
#battery.critical {
	color: @red;
	animation: none;
}

#clock { color: @flamingo; }

#custom-notifications { color: @flamingo; }

#window { color: @mauve; }

.modules-right,
.modules-left,
.modules-center {
	background-color: @base;
	border-radius: 15px;
}

.modules-right {
	padding: 0 10px;
}

.modules-left {
	padding: 0 20px;
}

.modules-center {
	padding: 0 10px;
}

#battery.charging,
#battery.plugged {
	color: @sapphire;
}

@keyframes blink {
to {
	color: #000000;
}
}

/* Using steps() instead of linear as a timing function to limit cpu usage */
#battery.critical:not(.charging) {
	background-color: #f53c3c;
	color: #ffffff;
	animation-name: blink;
	animation-duration: 0.5s;
	animation-timing-function: steps(12);
	animation-iteration-count: infinite;
	animation-direction: alternate;
}

label:focus {
	background-color: #000000;
}

#pulseaudio.muted {
	color: @text;
}

